# sicloudman

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  conftest.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sicloudman.py  tox.ini
repoassist/: README.md  __init__.py  __main__.py  clean.py  cli.py  cloud.py  colreqs.py  exceptions.py  formatter.py  logger.py  prepare.py  pygittools.py  release.py  settings.py  utils.py  wizard.py
repoassist/templates/: AUTHORS_prepared.md.j2  CHANGELOG_generated.md.j2
tests/: sicloudman_test.py
