[metadata]
name = sicloudman
author = Damian Pala
author-email = damian.pala@sentisa.com
maintainer = 
maintainer-email = 
summary = The Simple Cloud Manager.
description-file = README.md
home-page = 
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
keywords = 
    sicloudman

[pbr]
skip_changelog = 1
skip_authors = 1

[pyrepogen]
# Possible values: package or module
project-type = module
# Possible values: generated or prepared
changelog-type = generated
# Possible values: generated or prepared
authors-type = generated
# Ignore directories for requirements discovery. Insert as an unix style path absolute or relative.
pipreqs-ignore =
    repoassist
    tests

[options]
py_modules = 
    sicloudman


[files]


[entry_points]

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[tool:pytest]
norecursedirs = . .svn _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = -p no:xdist --tb=long --capture=fd -rxX  --maxfail=10
# --durations=3    report the top 3 longest tests
pep8ignore = E501 E265 E127 E128 E402

[flake8]
exclude = migrations,__pycache__,build,bmll/config.py,env,src,.tox,repoassist
# the only additional ignores are the docstrings ones Dxx, the other.
ignore = D, H306
max-line-length=119

# Following lines refers to autopep8
max_line_length=119
aggressive=2
experimental=1

[coverage:report]
exclude_lines =
omit = 
    conftest.py
